# rust_learn

./: Cargo.toml
src/: main.rs
src/config/: database.rs
src/controllers/: mod.rs  user_controller.rs
src/models/: user.rs
src/responses/: mod.rs  success_response.rs
src/routes/: user_routes.rs
