[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[dependencies.mongodb]
version = "2.8.0"
default-features = false
features = ["async-std-runtime"]
serde_json = "1.0"